--- a/index.html
+++ b/index.html
@@ -52,27 +52,27 @@
 <p>
 
 </p>
-<h3> University Cut-offs</h3>
+<h3> Teacher Post</h3>
 <table border="1">
   <thead>
   <tr>
     <th>Subject</th>
-    <th>Cut-Offs(%)</th>
+    <th>Vacancy</th>
   </tr>
 
   </thead>
   <tbody>
   <tr>
     <td>Physics</td>
-    <td>96</td>
+    <td>66</td>
   </tr>
   <tr>
     <td>Computer Science</td>
-    <td>98</td>
+    <td>118</td>
   </tr>
   <tr>
     <td>Maths</td>
-    <td>96</td>
+    <td>66</td>
   </tr>
   </tbody>
 </table>
