--- a/index.html
+++ b/index.html
@@ -2,21 +2,24 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>💔Ankit Kumar Singh </title>
+    <title>🐱‍🏍Ankit Kumar Singh </title>
+  <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <table cellspacing="30">
+    <table cellspacing="12">
       <tr>
         <td>
           <img src="https://i.im.ge/2022/06/13/rvQzU1.png" alt="Ankit Kumar Singh" width = "320px " height="350px">
         </td>
         <td>
           <h1> Ankit Kumar Singh </h1>
-          <a href="https://www.instagram.com/i.ankit07">My Instagram 🐥</a>
-          <p>
+            <p>
             <em> Student at <strong> Hansraj College </strong> in 2nd Year.... </em>
             <p>
                Studying Computer Science from 2020..
+            </p>
+            <p>
+                      <a href="https://www.instagram.com/i.ankit07">My Instagram 🐥</a>
             </p>
         </td>
       </tr>
@@ -26,55 +29,62 @@
 
 
     </p>
-    <hr size="3" noshade />
+    <hr>
 <h3> My Schooling details </h3>
 <ul>
 
 <p>
-  <li> *New Age Public School Till <strong>2016</strong> </li>
+  <li> New Age Public School Till <strong>2016</strong> </li>
 </p>
 <p>
-   *Govt Co-Ed Secondary School Till  <strong>2016</strong>
+  <li>
+    Govt Co-Ed Secondary School Till  <strong>2018</strong>
+  </li>
 </p>
 <p>
-  *Govt BOys sr Secondary School Till  <strong>2016</strong>
+<li>
+   Govt BOys sr Secondary School Till  <strong>2020</strong>
+</li>
 </p>
 </ul>
+<hr>
 <h3>My hobbies</h3>
 <ol>
   <li>Playing cricket</li>
-  <li>listening Music</li> <!-- <ol type="i" (roman numbers),, if start ="8" , then it will start with 8 ; -->
-
-
+   <li> <a href="fav.html">Listening Musics</a> </li>
+ <!-- <ol type="i" (roman numbers),, if start ="8" , then it will start with 8 ; -->
 <li>playing video games</li>
 </ol>
-<a href="fav.html">My Musics</a>
-<p>
 
+<p>
+<hr>
 </p>
-<h3> Teacher Post</h3>
-<table border="1">
+<h3> My Skills</h3>
+<table cellspacing="10">
   <thead>
   <tr>
-    <th>Subject</th>
-    <th>Vacancy</th>
+    <th>Skill</th>
+    <th>Level</th>
   </tr>
 
   </thead>
   <tbody>
   <tr>
-    <td>Physics</td>
-    <td>66</td>
+    <td>C++</td>
+    <td>⭐⭐⭐⭐</td>
   </tr>
   <tr>
-    <td>Computer Science</td>
-    <td>118</td>
+    <td>Python</td>
+    <td>⭐⭐⭐⭐⭐</td>
   </tr>
   <tr>
-    <td>Maths</td>
-    <td>66</td>
+    <td>Web Devlopment</td>
+    <td>⭐⭐⭐</td>
   </tr>
   </tbody>
 </table>
+<hr>
+<h3>Feedback Form</h3>
+<p> <a href="feedback.html">Give Feedback</a> </p>
   </body>
 </html>
