--- a/feedback.html
+++ b/feedback.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Feedback</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <form class="" action="mailto:ankitbihdel59@gmail.com" method="post" enctype="text/plain">
