--- a/fav.html
+++ b/fav.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Genre</title>
-      <link rel="stylesheet" href="css/style.css">
+      <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h3>Favourite Musics</h3>
